[package]
name = "nightlight"
version = "0.2.0"
authors = ["smudge <nathan@ngriffith.com>"]
edition = "2018"
categories = ["command-line-utilities", "os::macos-apis"]
description = "A CLI for configuring 'Night Shift' on macOS 🌕🌖🌗🌘🌑"
repository = "https://github.com/smudge/nightlight"
readme = "README.md"
license = "MIT"

[dependencies]
time = "0.2.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.8.1"
